# Concepts_In_Code

./: CMakeLists.txt  REAMME.md  main.cpp
src/: DummyClass.cpp  DummyClass.hpp
